tests/error/comptime/check_slice_construction21.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);

		__builtin_slice_from_ptrs(p, p + 1);
	});
}
